--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                         <p>
                             Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                            id est laborum Libero justo laoreet sit amet cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec
+                            id est laborum Libero justo laoreet sit amet cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donecion
                         </p>
                     </div>
                 </div>
@@ -910,7 +910,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-                            <h4>Vladimor</h4>
+                            <h4>Vladimir</h4>
                             <span>CTO</span>
                             <div class="social">
                                 <a href="">
@@ -933,7 +933,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-                            <h4>Vladimor</h4>
+                            <h4>Vladimir</h4>
                             <span>CTO</span>
                             <div class="social">
                                 <a href="">
@@ -956,7 +956,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-                            <h4>Vladimor</h4>
+                            <h4>Vladimir</h4>
                             <span>CTO</span>
                             <div class="social">
                                 <a href="">
@@ -979,7 +979,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-                            <h4>Vladimor</h4>
+                            <h4>Vladimir</h4>
                             <span>CTO</span>
                             <div class="social">
                                 <a href="">
@@ -1002,7 +1002,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="member">
                             <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-                            <h4>Vladimor</h4>
+                            <h4>Vladimir</h4>
                             <span>CTO</span>
                             <div class="social">
                                 <a href="">
