--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <a class="nav-link scrollto active" href="#hero">Home</a>
                     </li>
                     <li>
-                        <a class="nav-link scrollto" href="#about">About</a>
+                        <a class="nav-link scrollto" href="#about">Que es</a>
                     </li>
                     <li>
-                        <a class="nav-link scrollto" href="#features">Features</a>
+                        <a class="nav-link scrollto" href="#features">Caracteristicas</a>
                     </li>
                     <li>
                         <a class="nav-link scrollto" href="#pricing">Pricing</a>
@@ -60,39 +60,6 @@
                     </li>
                     <li>
                         <a class="nav-link scrollto" href="#gallery">Gallery</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">
-                            <span>Drop Down</span>
-                            <i class="bi bi-chevron-down"></i>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#">Drop Down 1</a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">
-                                    <span>Deep Drop Down</span>
-                                    <i class="bi bi-chevron-right"></i>
-                                </a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Drop Down 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Drop Down 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Drop Down 4</a>
-                            </li>
-                        </ul>
                     </li>
                     <li>
                         <a class="nav-link scrollto" href="#contact">Contact</a>
@@ -946,7 +913,7 @@
         <section id="gallery ">
             <div class="container-fluid " data-aos="fade-up ">
                 <div class="section-header ">
-                    <h3 class="section-title ">Gallery</h3>
+                    <h3 class="section-title ">Galeria</h3>
                     <span class="section-divider "></span>
                     <p class="section-description ">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                     </p>
