--- a/index.html
+++ b/index.html
@@ -209,41 +209,79 @@
     <!-- ======= Advanced Featuress Section ======= -->
     <section id="advanced-features">
 
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <img class="advanced-feature-img" src="assets/img/advanced-feature-1.jpg" alt="">
-                </div>
-                <div class="col-6">
-                    <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                    <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="features-row section-bg" data-aos="fade-up">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <img class="advanced-feature-img-left" src="assets/img/advanced-feature-1.jpg" alt="">
+                        <div>
+                            <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+                            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
 
         <div class="features-row" data-aos="fade-up">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
-                        <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                        <i class="bi bi-calendar4-week"></i>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                        <i class="bi bi-bar-chart"></i>
-                        <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                        <i class="bi bi-brightness-high"></i>
-                        <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                    <div class="col-12">
+                        <img class="advanced-feature-img-right wow fadeInRight" src="assets/img/advanced-feature-2.jpg" alt="">
+                        <div>
+                            <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+                            <i class="bi bi-calendar4-week"></i>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <i class="bi bi-bar-chart"></i>
+                            <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                            <i class="bi bi-brightness-high"></i>
+                            <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                        </div>
                     </div>
-                    <div class="col-6">
-                        <img class="advanced-feature-img" src="assets/img/advanced-feature-2.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="features-row section-bg" data-aos="fade-up">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <img class="advanced-feature-img-left" src="assets/img/advanced-feature-1.jpg" alt="">
+                        <div>
+                            <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+                            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="features-row" data-aos="fade-up">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <img class="advanced-feature-img-right wow fadeInRight" src="assets/img/advanced-feature-2.jpg" alt="">
+                        <div>
+                            <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
+                            <i class="bi bi-calendar4-week"></i>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                            <i class="bi bi-bar-chart"></i>
+                            <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                            <i class="bi bi-brightness-high"></i>
+                            <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <title>Visualización de Datos MQTT</title>
 
