--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <script src="assets/js/PahoMQTTClient.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -40,7 +43,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">Que es</a></li>
+                    <li><a class="nav-link scrollto" href="#about">¿Qué es?</a></li>
                     <li><a class="nav-link scrollto" href="#features">Caracteristicas</a></li>
                     <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -79,7 +82,7 @@
     <section id="about" class="section-bg">
         <div class="container-fluid" data-aos="fade-up">
             <div class="section-header">
-                <h3 class="section-title">Que es</h3>
+                <h3 class="section-title">¿QUÉ ES?</h3>
                 <span class="section-divider"></span>
                 <p class="section-description">
                     Innovación y Progreso en la agricultura.
@@ -91,7 +94,7 @@
                     <img src="assets/img/AutomatIA001.jpeg" alt="">
                 </div>
                 <div class="col-lg-6 contnt" data-aos="fade-left" data-aos-delay="100">
-                    <h2>Un desarrollo de IA de última generacion que monitorea y optimiza los cultivos de tomate en tiempo real, proporcionando de calidad para tomar las mejores decisiones agrícolas informadas.</h2>
+                    <h2>Un avanzado sistema de Inteligencia Artificial supervisa y mejora en tiempo real los cultivos de tomate, ofreciendo datos de calidad para guiar decisiones agrícolas óptimas y bien informadas.</h2>
                     <p>Una solución innovadora que aumenta la productividad, reduce pérdidas y mejora la rentabilidad.</p>
                     <ul class="custom-list">
                         <li><i class="bi bi-check-circle"></i> Sensores y cámaras de alta resolución recopilan datos sobre el estado del cultivo en tiempo real.</li>
@@ -150,22 +153,75 @@
     <!-- End Features Section -->
 
     <!-- ======= Advanced Features Section ======= -->
+    <section id="advanced-features">
+        <div id="imageCarousel" class="carousel slide advanced-feature-img-right wow fadeInRight" data-bs-interval="false">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 d-flex flex-column flex-md-row align-items-center">
+                        <div class="advanced-feature-content">
+                            <h2>Entrenando a un modelo de reconocimiento de enfermedades en tomates
+                            </h2>
+                            <h3>Adquisición de los datos:
+                            </h3>
+                            <p>
+                                Se buscaron decenas de conjuntos de datasets de enfermedades en tomates, seleccionando los más completos. Sin embargo, al unirlos, se descubrió que no todas las categorías tenían la misma cantidad de ejemplos, lo que podría confundir al modelo.
+                            </p>
+                            <p>
+                                Para solucionarlo, se aplicó una técnica llamada "aumento de datos", que es como crear más fotos de entrenamiento a partir de las existentes. Se usaron técnicas como transformaciones morfológicas (cambiar el tamaño, la forma, rotación, etc.) para crear
+                                nuevas variaciones de las imágenes.
+                            </p>
+                        </div>
+
+                        <div id="imageCarousel" class="carousel slide advanced-feature-img-right wow fadeInRight">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active"> <img src="assets/img/WhatsApp Image 2024-06-10 at 21.55.32.jpeg" class="d-block w-100" alt="Image 1"> </div>
+                                <div class="carousel-item"> <img src="assets/img/a-captivating-3d-render-cinematic-poster-featuring-oGJqWPJURZK9RRgqPO-ZFA-T58ctlPRR2Wz_FSqnFKuxg_002.jpeg" class="d-block w-100" alt="Image 2"> </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="visually-hidden">Previous</span> </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="visually-hidden">Next</span> </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="advanced-features">
         <div class="features-row section-bg aos-init aos-animate" data-aos="fade-up">
             <div class="container">
                 <div class="row">
                     <div class="col-12 d-flex flex-column flex-md-row">
-                        <div class="text-content">
-                            <h2>Entrenando a un modelo de reconocimiento de tomates</h2>
-                            <p>Se buscaron decenas de conjuntos de datos de tomates, seleccionando los más completos. Sin embargo, al unirlos, se descubrió que no todas las categorías tenían la misma cantidad de ejemplos, lo que podría confundir al modelo.</p>
+                        <div class="advanced-feature-img-left wow fadeInLeft">
                             <p>Para solucionarlo, se aplicó una técnica llamada "aumento de datos", que es como crear más fotos de tomates a partir de las existentes. Se usaron técnicas como transformaciones morfológicas (cambiar el tamaño, la forma, etc.)
                                 para crear nuevas variaciones de las imágenes.</p>
                             <p>Una vez que se tuvo un conjunto de datos equilibrado, con 10.000 ejemplos por cada categoría de tomate, llegó el momento de enseñarle al modelo a identificarlos. Se utilizó un algoritmo llamado YOLO, que funciona como un detective
                                 buscando pistas en las imágenes.</p>
-                            <p>Para ayudar al detective YOLO, se creó un sistema que convertía el contorno de cada tomate en un recuadro (bounding box) que lo delimitaba. Esto facilitaba al algoritmo encontrar los tomates en las imágenes.</p>
-                            <p>Sin embargo, no todo era perfecto. La técnica de conversión de contornos no era 100% precisa, por lo que se creó un sistema de corrección que revisaba los recuadros y los ajustaba si era necesario.</p>
-                            <p>¡Y así, el modelo de reconocimiento de tomates estaba listo para identificar diferentes variedades con gran precisión!</p>
+
+                        </div>
+                        <img class="advanced-feature-img" src="/assets/img/Advanced_Featuress_Section/Advanced_Featuress_Section0001.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+
+
+
+
+    <section id="advanced-features">
+        <div class="features-row section-bg aos-init aos-animate" data-aos="fade-up">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 d-flex flex-column flex-md-row">
+                        <div class="advanced-feature-img-left wow fadeInLeft">
+                            <p>Para solucionarlo, se aplicó una técnica llamada "aumento de datos", que es como crear más fotos de tomates a partir de las existentes. Se usaron técnicas como transformaciones morfológicas (cambiar el tamaño, la forma, etc.)
+                                para crear nuevas variaciones de las imágenes.</p>
+                            <p>Una vez que se tuvo un conjunto de datos equilibrado, con 10.000 ejemplos por cada categoría de tomate, llegó el momento de enseñarle al modelo a identificarlos. Se utilizó un algoritmo llamado YOLO, que funciona como un detective
+                                buscando pistas en las imágenes.</p>
+
                         </div>
                         <img class="advanced-feature-img" src="/assets/img/Advanced_Featuress_Section/Advanced_Featuress_Section0001.jpeg" alt="">
                     </div>
@@ -183,12 +239,10 @@
                     <img class="advanced-feature-img-right wow fadeInRight " src="assets/img/advanced-feature-2.jpg " alt=" ">
                     <div>
                         <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                        <i class="bi bi-calendar4-week "></i>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                        <i class="bi bi-bar-chart "></i>
-                        <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                        <i class="bi bi-brightness-high "></i>
-                        <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                        <p>Para ayudar al detective YOLO, se creó un sistema que convertía el contorno de cada tomate en un recuadro (bounding box) que lo delimitaba. Esto facilitaba al algoritmo encontrar los tomates en las imágenes.</p>
+                        <p>Para ayudar al detective YOLO, se creó un sistema que convertía el contorno de cada tomate en un recuadro (bounding box) que lo delimitaba. Esto facilitaba al algoritmo encontrar los tomates en las imágenes.</p>
+                        <p>Sin embargo, no todo era perfecto. La técnica de conversión de contornos no era 100% precisa, por lo que se creó un sistema de corrección que revisaba los recuadros y los ajustaba si era necesario.</p>
+                        <p>¡Y así, el modelo de reconocimiento de tomates estaba listo para identificar diferentes variedades con gran precisión!</p>
                     </div>
                 </div>
             </div>
@@ -1085,5 +1139,7 @@
 
 
 </body>
+
+</html>
 
 </html>
