--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
         </div>
     </section>
     <!-- End About Section -->
-
     <!-- ======= Features Section ======= -->
     <section id="features">
         <div class="container" data-aos="fade-up">
@@ -151,6 +150,7 @@
         </div>
     </section>
     <!-- End Features Section -->
+    Diagram_-_flowchart-AutomatIA_operation.png
 
     <!-- ======= Advanced Features Section ======= -->
     <section id="advanced-features">
@@ -250,25 +250,6 @@
         </div>
     </section>
 
-
-
-    <div class="features-flex " data-aos="fade-up ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-12 ">
-                    <img class="advanced-feature-img-right wow fadeInRight " src="assets/img/advanced-feature-2.jpg " alt=" ">
-                    <div>
-                        <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse</h2>
-                        <p>Para ayudar al detective YOLO, se creó un sistema que convertía el contorno de cada tomate en un recuadro (bounding box) que lo delimitaba. Esto facilitaba al algoritmo encontrar los tomates en las imágenes.</p>
-                        <p>Para ayudar al detective YOLO, se creó un sistema que convertía el contorno de cada tomate en un recuadro (bounding box) que lo delimitaba. Esto facilitaba al algoritmo encontrar los tomates en las imágenes.</p>
-                        <p>Sin embargo, no todo era perfecto. La técnica de conversión de contornos no era 100% precisa, por lo que se creó un sistema de corrección que revisaba los recuadros y los ajustaba si era necesario.</p>
-                        <p>¡Y así, el modelo de reconocimiento de tomates estaba listo para identificar diferentes variedades con gran precisión!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </section>
     <!-- End Advanced Features Section -->
 
 
