--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
         </div>
     </section>
     <!-- End Features Section -->
-    Diagram_-_flowchart-AutomatIA_operation.png
+
+    COMO FUNCIONA
+
+    <img class="advanced-feature-img" src="assets/img/Diagram_-_flowchart-AutomatIA_operation.png">
+
 
     <!-- ======= Advanced Features Section ======= -->
     <section id="advanced-features">
@@ -432,40 +436,85 @@
     <section>
         <div>
             <h1>Enfermedades en las hojas del tomate</h1>
+            <div class="enfermedad ">
+                <h2>Tomato healthy</h2>
+            </div>
 
             <div class="enfermedades ">
                 <div class="enfermedad ">
-                    <h2>Tomato Bacterial spot</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Early blight</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato healthy</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Late blight</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Leaf Mold</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato mosaic virus</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Septoria leaf spot</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Spider mites Two-spotted spider mite</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Target Spot</h2>
-                </div>
-                <div class="enfermedad ">
-                    <h2>Tomato Yellow Leaf Curl Virus</h2>
+                    <div>
+                        <h2>Tomato Bacterial spot</h2>
+                        <img class="advanced-feature-img" src="
+    assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Bacterial_spot.jpeg">
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+                    <div class="enfermedad ">
+                        <h2>Tomato Early blight</h2>
+                        <img class="advanced-feature-img" src="
+                        assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Early_blight.jpeg">
+                    </div>
+
+
+
+
+
+
+
+
+
+                    <div class="enfermedad ">
+                        <h2>Tomato Late blight</h2>
+                        <img class="advanced-feature-img" src="
+                    assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Late_blight.jpeg">
+
+                    </div>
+
+
+
+
+
+                    <div class="enfermedad ">
+                        <h2>Tomato Leaf Mold</h2>
+                        <img class="advanced-feature-img" src="
+                    assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Late_blight.jpeg">
+
+                    </div>
+
+
+
+
+
+
+
+
+
+                    <div class="enfermedad ">
+                        <h2>Tomato mosaic virus</h2>
+                    </div>
+                    <div class="enfermedad ">
+                        <h2>Tomato Septoria leaf spot</h2>
+                    </div>
+                    <div class="enfermedad ">
+                        <h2>Tomato Spider mites Two-spotted spider mite</h2>
+                    </div>
+                    <div class="enfermedad ">
+                        <h2>Tomato Target Spot</h2>
+                    </div>
+                    <div class="enfermedad ">
+                        <h2>Tomato Yellow Leaf Curl Virus</h2>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <section id="call-to-action ">
