--- a/index.html
+++ b/index.html
@@ -498,21 +498,43 @@
 
 
 
+                    <h2>Tomato mosaic virus</h2>
                     <div class="enfermedad ">
-                        <h2>Tomato mosaic virus</h2>
+                        <img class="advanced-feature-img" src="assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_mosaic_virus.jpeg">
+
+
+
                     </div>
                     <div class="enfermedad ">
                         <h2>Tomato Septoria leaf spot</h2>
+                        <img class="advanced-feature-img" src="assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Septoria_leaf_spot.jpeg"> ">
+
                     </div>
                     <div class="enfermedad ">
                         <h2>Tomato Spider mites Two-spotted spider mite</h2>
+                        <img class="advanced-feature-img" src="assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Spider_mites_Two-spotted_spider_mite.jpeg">
+
+
+
                     </div>
+
                     <div class="enfermedad ">
                         <h2>Tomato Target Spot</h2>
+                        <img class="advanced-feature-img" src="assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Target_Spot.jpeg">
+
+
+
+
+
                     </div>
                     <div class="enfermedad ">
                         <h2>Tomato Yellow Leaf Curl Virus</h2>
+                        <img class="advanced-feature-img" src="assets/img/Enfermedades_en_las_hojas_del_tomate/Tomato_Yellow_Leaf_Curl_Virus.jpeg
+">
+
+
                     </div>
+
                 </div>
             </div>
     </section>
